testsuite/tests/typing-rectypes-bugs/pr6174_bad.compilers.reference
File "pr6174_bad.ml", line 11, characters 24-25:
Error: This expression has type $0 but an expression was expected of type
         $1 = ($2 -> $1) -> $1
